--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -11,7 +11,19 @@ services:
     ports:
          - "5432:5432"
     volumes:
-         - postgres_catalog:/var/lib/postgresql/data/
+         - postgres_catalog:/data_catalog
+  
+  basketdb:
+    container_name: basketdb
+    environment:
+         - POSTGRES_USER=postgres
+         - POSTGRES_PASSWORD=postgres
+         - POSTGRES_DB=BasketDb
+    restart: always
+    ports:
+         - "5433:5432"
+    volumes:
+         - postgres_basket:/data_basket
           
   catalog.api:
     environment:
@@ -33,9 +45,13 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=basketdb;Port=5433;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
+ 
+    depends_on:
+      - basketdb
     ports:
-      - "8080"
-      - "8081"
+      - "5060:8080"
+      - "5061:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
