--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -24,6 +24,12 @@ services:
          - "5433:5432"
     volumes:
          - postgres_basket:/data_basket
+  
+  distributedcache:
+    container_name: distributedcache
+    restart: always
+    ports:
+         - "6397:6397"
           
   catalog.api:
     environment:
