--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,14 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
+  "ConnectionStrings": 
+    {
+      "Database" :  "Data source=discountdb"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Information"
+      }
+    },
+    "AllowedHosts": "*",
+    "Kestrel": {
+      "EndpointDefaults": {
+        "Protocols": "Http2"
+      }
     }
   }
-}
