--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -68,7 +68,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
-      - ConnectionStrings__Database=discountdb
+      - ConnectionStrings__Database=Data Source=discountdb
     
     ports:
       - "9090:8080"
