--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -24,6 +24,17 @@ services:
          - "5433:5432"
     volumes:
          - postgres_basket:/data_basket
+
+  orderdb:
+    container_name: orderdb
+    environment:
+         - ACCEPT_EULA=Y
+         - SA_PASSWORD=SwN12345678 
+    restart: always
+    ports:
+         - "1433:1433"
+    volumes:
+         - mssql_order:/data_order
   
   distributedcache:
     container_name: distributedcache
