--- a/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
+++ b/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:4001"
+      "applicationUrl": "http://localhost:5002"
     },
     "https": {
       "commandName": "Project",
@@ -14,9 +14,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:4041;http://localhost:4001"
+      "applicationUrl": "https://localhost:5052;http://localhost:5002"
     },
-    "Container (Dockerfile)": {
+    "Docker": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
